# interview-workflow-engine

./: .env  .gitignore  README.md  docker-compose.yml
invoicehub/: Dockerfile  package-lock.json  package.json  server.ts
workflow-engine-py/: README.md  pyproject.toml
workflow-engine-py/src/: activities.py  test_activities.py  types.py  workflow.py  workflow_definition.py
workflow-engine-py/src/run/: client.py  worker.py
workflow-engine-py/src/util/: llm.py  session.py
workflow-engine-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
workflow-engine-ts/src/: activities.test.ts  activities.ts  types.ts  workflow-definition.ts  workflow.ts
workflow-engine-ts/src/run/: client.ts  worker.ts
workflow-engine-ts/src/util/: llm.ts  session.ts
