[project]
name = "workflow-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
